s1514483.log
Log for student s1514483, green deer at 2018-01-13T16-00-02+0000
Rootd: /home/s1467120/llvm-marking-suite
UUN: s1514483
Salias: green deer
========== Updating Repository
Moved to directory /home/s1467120/llvm-marking-suite/students/s1514483.repo
Already on 'master'
Your branch is up-to-date with 'origin/master'.
Already up-to-date.
========== Making temp copies
Moved to directory /home/s1467120/llvm-marking-suite/tmp/s1514483/part-4
========== Compiling passes
rm -rf /home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/build /home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-simple-dce/build
rm -rf /home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/output /home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-simple-dce/output
mkdir -p /home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/build
cd /home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/build; export LLVM_DIR=/home/s1467120/llvm-marking-suite/llvm-build/; cmake ..
-- The C compiler identification is GNU 4.8.5
-- The CXX compiler identification is GNU 4.8.5
-- Check for working C compiler: /usr/bin/cc
-- Check for working C compiler: /usr/bin/cc -- works
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Detecting C compile features
-- Detecting C compile features - done
-- Check for working CXX compiler: /usr/bin/c++
-- Check for working CXX compiler: /usr/bin/c++ -- works
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/build
cd /home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/build; make
make[1]: Entering directory '/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/build'
make[2]: Entering directory '/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/build'
make[3]: Entering directory '/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/build'
Scanning dependencies of target SkeletonPass
make[3]: Leaving directory '/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/build'
make[3]: Entering directory '/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/build'
[ 50%] Building CXX object skeleton/CMakeFiles/SkeletonPass.dir/Skeleton.cpp.o
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp: In member function ‘virtual bool {anonymous}::SimpleDCE::runOnFunction(llvm::Function&)’:
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:73:35: error: ‘usedef’ was not declared in this scope
       DenseMap<const BasicBlock*, usedef> bbMap;
                                   ^
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:73:41: error: template argument 2 is invalid
       DenseMap<const BasicBlock*, usedef> bbMap;
                                         ^
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:73:41: error: template argument 4 is invalid
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:73:48: error: invalid type in declaration before ‘;’ token
       DenseMap<const BasicBlock*, usedef> bbMap;
                                                ^
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:75:26: error: ‘findUseDef’ was not declared in this scope
       findUseDef(F, bbMap);
                          ^
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:77:35: error: ‘in_out’ was not declared in this scope
       DenseMap<const BasicBlock*, in_out> liveMap;
                                   ^
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:77:41: error: template argument 2 is invalid
       DenseMap<const BasicBlock*, in_out> liveMap;
                                         ^
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:77:41: error: template argument 4 is invalid
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:77:50: error: invalid type in declaration before ‘;’ token
       DenseMap<const BasicBlock*, in_out> liveMap;
                                                  ^
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:78:36: error: ‘in_out_sets’ was not declared in this scope
       in_out_sets(F, bbMap, liveMap);
                                    ^
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:80:36: error: the value of ‘in_out’ is not usable in a constant expression
       DenseMap<const Instruction*, in_out> instliveMap;
                                    ^
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:77:35: note: ‘in_out’ was not declared ‘constexpr’
       DenseMap<const BasicBlock*, in_out> liveMap;
                                   ^
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:80:42: error: type/value mismatch at argument 2 in template parameter list for ‘template<class KeyT, class ValueT, class KeyInfoT, class BucketT> class llvm::DenseMap’
       DenseMap<const Instruction*, in_out> instliveMap;
                                          ^
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:80:42: error:   expected a type, got ‘in_out’
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:80:42: error: template argument 4 is invalid
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:80:55: error: invalid type in declaration before ‘;’ token
       DenseMap<const Instruction*, in_out> instliveMap;
                                                       ^
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:84:9: error: ‘beforeAfter’ was not declared in this scope
         beforeAfter s = iBAMap.lookup(&*i);
         ^
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:84:21: error: expected ‘;’ before ‘s’
         beforeAfter s = iBAMap.lookup(&*i);
                     ^
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:85:26: error: ‘instMap’ was not declared in this scope
         errs() << "%" << instMap.lookup(&*i) << ": { ";
                          ^
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:86:23: error: ‘s’ was not declared in this scope
         std::for_each(s.before.begin(), s.before.end(), print_elem);
                       ^
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:86:57: error: ‘print_elem’ was not declared in this scope
         std::for_each(s.before.begin(), s.before.end(), print_elem);
                                                         ^
/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/skeleton/Skeleton.cpp:109:36: error: ‘isInstDead’ was not declared in this scope
                   if(isInstDead(&*i)){
                                    ^
skeleton/CMakeFiles/SkeletonPass.dir/build.make:62: recipe for target 'skeleton/CMakeFiles/SkeletonPass.dir/Skeleton.cpp.o' failed
make[3]: *** [skeleton/CMakeFiles/SkeletonPass.dir/Skeleton.cpp.o] Error 1
make[3]: Leaving directory '/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/build'
CMakeFiles/Makefile2:85: recipe for target 'skeleton/CMakeFiles/SkeletonPass.dir/all' failed
make[2]: *** [skeleton/CMakeFiles/SkeletonPass.dir/all] Error 2
make[2]: Leaving directory '/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/build'
Makefile:83: recipe for target 'all' failed
make[1]: *** [all] Error 2
make[1]: Leaving directory '/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/build'
Makefile:21: recipe for target '/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/build/skeleton/libSkeletonPass.so' failed
make: *** [/home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/build/skeleton/libSkeletonPass.so] Error 2
rm /home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/buildmake: unlink: /home/s1467120/llvm-marking-suite/tmp/s1514483/part-4/passes/llvm-pass-my-dce/build: Is a directory

Building/running passes for student s1514483 failed!
Building/running marking script for student s1514483 failed!
Finished marking student s1514483
